Make deploying from Travis easier [ci skip]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-cli-deploy-plugin"
   ],
   "license": "MIT",
   "author": "",
@@ -28,11 +29,13 @@
     "ember-component-css": "0.3.x",
     "ember-data": "2.x",
     "esprima": "^4.0.0",
+    "execa": "^0.7.0",
     "fs-extra": "^2.1.2",
     "git-repo-version": "^0.4.1",
     "highlightjs": "^9.10.0",
     "inflected": "^1.1.7",
     "marked": "^0.3.6",
+    "npm-package-arg": "^5.1.2",
     "yuidoc-to-jsonapi": "^0.4.1",
     "yuidocjs": "^0.10.2"
   },
@@ -66,7 +69,8 @@
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "before": [
-      "ember-cli-htmlbars"
+      "ember-cli-htmlbars",
+      "ember-cli-deploy-git"
     ]
   }
 }
